// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linux assets checks asset extensions case insensitively 1`] = `
"Unable to resolve module ./asset.PNG from /root/index.js: 

None of these files exist:
  * asset.PNG(.native|..js|.native.js|.js|..json|.native.json|.json)
  * asset.PNG/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './asset.PNG';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux assets resolves asset files with resolution suffixes (matching exact) 1`] = `
"Unable to resolve module ./c@2x.png from /root/index.js: 

None of these files exist:
  * c@2x.png
  * c@2x.png/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './c@2x.png';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux assets resolves asset files with resolution suffixes (matching size) 1`] = `
"Unable to resolve module ./a@1.5x.png from /root/index.js: 

None of these files exist:
  * a@1.5x.png
  * a@1.5x.png/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './a@1.5x.png';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux assets resolves custom asset extensions when overriding assetExts 1`] = `
"Unable to resolve module ./asset2.png from /root/index.js: 

None of these files exist:
  * asset2.png(.native|..js|.native.js|.js|..json|.native.json|.json)
  * asset2.png/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './asset2.png';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux global packages uses the name in the package.json as the package name 1`] = `
"Unable to resolve module aPackage from /root/index.js: aPackage could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import a from 'aPackage';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux hasteImpl config param does not resolve haste names in node_modules folders 1`] = `
"Unable to resolve module hasteModule from /root/index.js: hasteModule could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import hasteModule from 'hasteModule';
    |                          ^
  3 | import bar from 'foo';"
`;

exports[`linux hasteImpl config param does not take file name or extension into account 1`] = `
"Unable to resolve module hasteModule.js from /root/index.js: hasteModule.js could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import module from 'hasteModule.js';
    |                     ^
  3 | import bar from 'foo';"
`;

exports[`linux hasteImpl config param does not take file name or extension into account 2`] = `
"Unable to resolve module invalidName from /root/lib.js: invalidName could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import invalid from 'invalidName';
    |                      ^
  3 | import bar from 'foo';"
`;

exports[`linux packages in node_modules/ browser field in package.json resolves mappings from internal calls 1`] = `
"Unable to resolve module ./foo.js from /root/node_modules/aPackage/index.js: 

None of these files exist:
  * node_modules/aPackage/foo.js(.native|..js|.native.js|.js|..json|.native.json|.json)
  * node_modules/aPackage/foo.js/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import f from './foo.js';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux packages in node_modules/ browser field in package.json resolves mappings to other packages 1`] = `
"Unable to resolve module left-pad/main from /root/node_modules/aPackage/index.js: left-pad/main could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import main from 'left-pad/main';
    |                   ^
  3 | import bar from 'foo';"
`;

exports[`linux packages in node_modules/ finds nested packages in node_modules 1`] = `
"Unable to resolve module qux from /root/index.js: qux could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import qux from 'qux';
    |                  ^
  3 | import bar from 'foo';"
`;

exports[`linux packages in node_modules/ react-native field in package.json resolves mappings from internal calls 1`] = `
"Unable to resolve module ./foo.js from /root/node_modules/aPackage/index.js: 

None of these files exist:
  * node_modules/aPackage/foo.js(.native|..js|.native.js|.js|..json|.native.json|.json)
  * node_modules/aPackage/foo.js/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import f from './foo.js';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux packages in node_modules/ react-native field in package.json resolves mappings to other packages 1`] = `
"Unable to resolve module left-pad/main from /root/node_modules/aPackage/index.js: left-pad/main could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import main from 'left-pad/main';
    |                   ^
  3 | import bar from 'foo';"
`;

exports[`linux packages in node_modules/ uses the folder name and not the name in the package.json 1`] = `
"Unable to resolve module invalidName from /root/index.js: invalidName could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import * as invalidName from 'invalidName';
    |                               ^
  3 | import bar from 'foo';"
`;

exports[`linux platforms resolves platform-specific files 1`] = `
"Unable to resolve module ./foo.js from /root/index.js: 

None of these files exist:
  * foo.js(.native|.ios.js|.native.js|.js|.ios.json|.native.json|.json)
  * foo.js/index(.native|.ios.js|.native.js|.js|.ios.json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import f from './foo.js';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`linux relative paths fails when trying to require a non supported extension 1`] = `
"Unable to resolve module ./a.another from /root/index.js: 

None of these files exist:
  * a.another(.native|..js|.native.js|.js|..json|.native.json|.json)
  * a.another/index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import root from './a.another';
    |                   ^
  3 | import bar from 'foo';"
`;

exports[`linux resolveRequest config param throws if resolveRequest returns null 1`] = `
"Unable to resolve module ./foo from /root/index.js: ./foo could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import f from './foo';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 assets checks asset extensions case insensitively 1`] = `
"Unable to resolve module ./asset.PNG from C:\\\\root\\\\index.js: 

None of these files exist:
  * asset.PNG(.native|..js|.native.js|.js|..json|.native.json|.json)
  * asset.PNG\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './asset.PNG';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 assets resolves asset files with resolution suffixes (matching exact) 1`] = `
"Unable to resolve module ./c@2x.png from C:\\\\root\\\\index.js: 

None of these files exist:
  * c@2x.png
  * c@2x.png\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './c@2x.png';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 assets resolves asset files with resolution suffixes (matching size) 1`] = `
"Unable to resolve module ./a@1.5x.png from C:\\\\root\\\\index.js: 

None of these files exist:
  * a@1.5x.png
  * a@1.5x.png\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './a@1.5x.png';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 assets resolves custom asset extensions when overriding assetExts 1`] = `
"Unable to resolve module ./asset2.png from C:\\\\root\\\\index.js: 

None of these files exist:
  * asset2.png(.native|..js|.native.js|.js|..json|.native.json|.json)
  * asset2.png\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import a from './asset2.png';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 global packages uses the name in the package.json as the package name 1`] = `
"Unable to resolve module aPackage from C:\\\\root\\\\index.js: aPackage could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import a from 'aPackage';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 hasteImpl config param does not resolve haste names in node_modules folders 1`] = `
"Unable to resolve module hasteModule from C:\\\\root\\\\index.js: hasteModule could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import hasteModule from 'hasteModule';
    |                          ^
  3 | import bar from 'foo';"
`;

exports[`win32 hasteImpl config param does not take file name or extension into account 1`] = `
"Unable to resolve module hasteModule.js from C:\\\\root\\\\index.js: hasteModule.js could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import module from 'hasteModule.js';
    |                     ^
  3 | import bar from 'foo';"
`;

exports[`win32 hasteImpl config param does not take file name or extension into account 2`] = `
"Unable to resolve module invalidName from C:\\\\root\\\\lib.js: invalidName could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import invalid from 'invalidName';
    |                      ^
  3 | import bar from 'foo';"
`;

exports[`win32 packages in node_modules/ browser field in package.json resolves mappings from internal calls 1`] = `
"Unable to resolve module ./foo.js from C:\\\\root\\\\node_modules\\\\aPackage\\\\index.js: 

None of these files exist:
  * node_modules\\\\aPackage\\\\foo.js(.native|..js|.native.js|.js|..json|.native.json|.json)
  * node_modules\\\\aPackage\\\\foo.js\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import f from './foo.js';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 packages in node_modules/ browser field in package.json resolves mappings to other packages 1`] = `
"Unable to resolve module left-pad/main from C:\\\\root\\\\node_modules\\\\aPackage\\\\index.js: left-pad/main could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import main from 'left-pad/main';
    |                   ^
  3 | import bar from 'foo';"
`;

exports[`win32 packages in node_modules/ finds nested packages in node_modules 1`] = `
"Unable to resolve module qux from C:\\\\root\\\\index.js: qux could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import qux from 'qux';
    |                  ^
  3 | import bar from 'foo';"
`;

exports[`win32 packages in node_modules/ react-native field in package.json resolves mappings from internal calls 1`] = `
"Unable to resolve module ./foo.js from C:\\\\root\\\\node_modules\\\\aPackage\\\\index.js: 

None of these files exist:
  * node_modules\\\\aPackage\\\\foo.js(.native|..js|.native.js|.js|..json|.native.json|.json)
  * node_modules\\\\aPackage\\\\foo.js\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import f from './foo.js';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 packages in node_modules/ react-native field in package.json resolves mappings to other packages 1`] = `
"Unable to resolve module left-pad/main from C:\\\\root\\\\node_modules\\\\aPackage\\\\index.js: left-pad/main could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import main from 'left-pad/main';
    |                   ^
  3 | import bar from 'foo';"
`;

exports[`win32 packages in node_modules/ uses the folder name and not the name in the package.json 1`] = `
"Unable to resolve module invalidName from C:\\\\root\\\\index.js: invalidName could not be found within the project or in these directories:
  node_modules

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import * as invalidName from 'invalidName';
    |                               ^
  3 | import bar from 'foo';"
`;

exports[`win32 platforms resolves platform-specific files 1`] = `
"Unable to resolve module ./foo.js from C:\\\\root\\\\index.js: 

None of these files exist:
  * foo.js(.native|.ios.js|.native.js|.js|.ios.json|.native.json|.json)
  * foo.js\\\\index(.native|.ios.js|.native.js|.js|.ios.json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import f from './foo.js';
    |                ^
  3 | import bar from 'foo';"
`;

exports[`win32 relative paths fails when trying to require a non supported extension 1`] = `
"Unable to resolve module ./a.another from C:\\\\root\\\\index.js: 

None of these files exist:
  * a.another(.native|..js|.native.js|.js|..json|.native.json|.json)
  * a.another\\\\index(.native|..js|.native.js|.js|..json|.native.json|.json)
  1 | import foo from 'bar';
> 2 | import root from './a.another';
    |                   ^
  3 | import bar from 'foo';"
`;

exports[`win32 resolveRequest config param throws if resolveRequest returns null 1`] = `
"Unable to resolve module ./foo from C:\\\\root\\\\index.js: ./foo could not be found within the project.

If you are sure the module exists, try these steps:
 1. Clear watchman watches: watchman watch-del-all
 2. Delete node_modules and run yarn install
 3. Reset Metro's cache: yarn start --reset-cache
 4. Remove the cache: rm -rf /tmp/metro-*
  1 | import foo from 'bar';
> 2 | import f from './foo';
    |                ^
  3 | import bar from 'foo';"
`;
